--- a/package.json
+++ b/package.json
@@ -7,16 +7,17 @@
   "scripts": {
     "start": "run-p start-*",
     "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
+    "test": "jest",
+    "test-cra": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "start-cra": "react-scripts start",
     "start-ts": "tsc -w",
-    "init-npm": "npm link react react-dom react-scripts mobx mobx-react js-plus tslib",
+    "init-npm": "npm link react react-dom react-scripts mobx mobx-react js-plus tslib ts-jest jest",
     "init-types": "npm link @types/react @types/react-dom @types/jest @types/node",
-    "install-eslint": "npm install -g eslint-config-react-app eslint babel-eslint eslint-plugin-react eslint-plugin-import eslint-plugin-jsx-a11y eslint-plugin-flowtype",
+    "install-eslint": "npm install -g eslint-config-react-app eslint babel-eslint eslint-plugin-react eslint-plugin-import eslint-plugin-jsx-a11y eslint-plugin-flowtype eslint-plugin-import",
     "init": "run-s init-*"
   },
-  "eslintConfigDisabled": {
+  "eslintConfig": {
     "extends": "react-app"
   },
   "devDependencies": {
@@ -25,15 +26,30 @@
     "@types/react": "",
     "@types/react-dom": "",
     "@types/jest": "",
-    "@types/node": ""
+    "@types/node": "",
+    "ts-jest": "",
+    "eslint-config-react-app": "",
+    "jest": ""
   },
   "dependencies": {
     "react": "",
     "react-dom": "",
     "mobx": "",
-    "mobx-react": ""
+    "mobx-react": "",
+    "js-plus": ""
   },
   "keywords": [],
   "license": "MIT",
-  "main": "index.js"
+  "main": "index.js",
+  "jest": {
+    "transform": {".(ts|tsx)": "<rootDir>/node_modules/ts-jest/preprocessor.js"},
+    "testRegex": "(/__tests__/.*|\\.(test|spec))\\.(ts|tsx)$",
+    "moduleFileExtensions": ["ts", "tsx" ],
+    "globals": {
+      "__TS_CONFIG__": {
+        "module": "commonjs",
+        "jsx": "react"
+      }
+    }
+  }
 }
