--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "run-p start-*",
     "build": "react-scripts build",
     "test": "jest",
+    "u": "jest -u",
     "test-cra": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "start-cra": "react-scripts start",
@@ -43,8 +44,8 @@
   "main": "index.js",
   "jest": {
     "transform": {".(ts|tsx)": "<rootDir>/node_modules/ts-jest/preprocessor.js"},
-    "testRegex": "(/__tests__/.*|\\.(test|spec))\\.(ts|tsx)$",
-    "moduleFileExtensions": ["ts", "tsx" ],
+    "testRegex": "(/__tests__/.*|\\.(test|spec))\\.(ts|tsx|js)$",
+    "moduleFileExtensions": ["ts", "tsx", "js" ],
     "globals": {
       "__TS_CONFIG__": {
         "module": "commonjs",
