--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,25 +1,22 @@
 {
   "compilerOptions": {
-    "target": "es2015", 
+    "target": "es2017", 
     "module": "es2015", 
     "outDir": "src",
     "rootDir": "app",
-    "noImplicitAny": true,
     "sourceMap": true,
     "experimentalDecorators": true,
     "jsx": "react-native",
     "allowSyntheticDefaultImports": true,
     "moduleResolution": "node",
-    "strictNullChecks": true,
     "noEmitHelpers": true,
     "importHelpers": true,
-    //"noImplicitUseStrict": true,
-    //"preserveConstEnums": true,
+    "noImplicitAny": true,
+    "strictNullChecks": true,
+    "noImplicitThis": true,
+    "alwaysStrict": true,
+    "noImplicitReturns": true,
     //"allowJs": true,
-    //"noImplicitReturns": true,
-    //"noImplicitThis": true,
-    //"noUnusedLocals": true,
-    //"noUnusedParameters": true,
     "watch": true
   },
   "exclude": [
