--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "init-npm": "npm link react react-dom react-scripts mobx mobx-react js-plus tslib ts-jest jest",
     "init-types": "npm link @types/react @types/react-dom @types/jest @types/node",
     "install-eslint": "npm install -g eslint-config-react-app eslint babel-eslint eslint-plugin-react eslint-plugin-import eslint-plugin-jsx-a11y eslint-plugin-flowtype eslint-plugin-import",
-    "init": "run-s init-*"
+    "init": "run-s init-*",
+    "prettier": "prettier --write 'src/**.js' --single-quote --trailing-comma=all --bracket-spacing=false"
   },
   "eslintConfig": {
     "extends": "react-app"
