--- a/package.json
+++ b/package.json
@@ -5,18 +5,25 @@
   "private": true,
   "author": "Dalci de Jesus Bagolin",
   "scripts": {
+    "start-crna": "react-native-scripts start",
+    "eject-crna": "react-native-scripts eject",
+    "android": "react-native-scripts android",
+    "ios": "react-native-scripts ios",
+    "test-crna": "node node_modules/jest/bin/jest.js --watch",
     "start": "run-p start-*",
     "build": "react-scripts build",
-    "test": "jest",
+    "test": "jest --watch",
     "u": "jest -u",
-    "test-cra": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject",
+    "test-cra": "react-scripts test --watch",
+    "eject-cra": "react-scripts eject",
     "start-cra": "react-scripts start",
     "start-ts": "tsc -w",
-    "init-npm": "npm link react react-dom react-scripts mobx mobx-react js-plus tslib ts-jest jest",
-    "init-types": "npm link @types/react @types/react-dom @types/jest @types/node",
+    "init-npm": "npm link mobx mobx-react js-plus tslib ts-jest jest @types/jest @types/node",
+    "init-cra-base": "npm link react react-dom react-scripts @types/react @types/react-dom",
+    "init-crna-base": "npm link expo@15.1.3 react@15.4.0 react-native@0.42.3 react-native-scripts@0.0.27 react-test-renderer@15.4.1 @types/react-native jest-expo@0.3.0",
     "install-eslint": "npm install -g eslint-config-react-app eslint babel-eslint eslint-plugin-react eslint-plugin-import eslint-plugin-jsx-a11y eslint-plugin-flowtype eslint-plugin-import",
-    "init": "run-s init-*",
+    "init-cra": "run-s init-cra init-npm",
+    "init-crna": "run-s init-crna init-npm",
     "prettier": "prettier --write 'src/**.js' --single-quote --trailing-comma=all --bracket-spacing=false"
   },
   "eslintConfig": {
@@ -27,26 +34,35 @@
     "tslib": "",
     "@types/react": "",
     "@types/react-dom": "",
+    "@types/react-native": "",
     "@types/jest": "",
     "@types/node": "",
     "ts-jest": "",
+    "jest": "",
+    "jest-expo": "^0.3.0",
     "eslint-config-react-app": "",
-    "jest": ""
+    "react-native-scripts": "0.0.27",
+    "react-test-renderer": "~15.4.1"
   },
   "dependencies": {
-    "react": "",
-    "react-dom": "",
+    "expo": "^15.1.3",
+    "react": "~15.4.0",
+    "react-native": "0.42.3",
+    "react-dom": "~15.4.0",
+    "react-native-web": "",
+    "react-native-navigation": "",
     "mobx": "",
     "mobx-react": "",
     "js-plus": ""
   },
   "keywords": [],
   "license": "MIT",
-  "main": "index.js",
+  "main": "./node_modules/react-native-scripts/build/bin/crna-entry.js",
   "jest": {
-    "transform": {".(ts|tsx)": "<rootDir>/node_modules/ts-jest/preprocessor.js"},
+    "transform": {".(ts|tsx)": "<rootDir>/../node_modules/ts-jest/preprocessor.js"},
     "testRegex": "(/__tests__/.*|\\.(test|spec))\\.(ts|tsx|js)$",
     "moduleFileExtensions": ["ts", "tsx", "js" ],
+    "rootDir": "app",
     "globals": {
       "__TS_CONFIG__": {
         "module": "commonjs",
