--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,6 +2,30 @@
   "version": "0.2.0",
   "configurations": [
     {
+      "type": "node",
+      "request": "launch",
+      "name": "Launch",
+      "sourceMaps": true,
+      "stopOnEntry": true,
+      "console": "internalConsole",
+      "cwd": "${workspaceRoot}",
+      "program": "${workspaceRoot}/app/index.ts",
+      "outFiles": ["${workspaceRoot}/src/*.js"]
+    },
+    {
+      "type": "node",
+      "request": "attach",
+      "name": "Attach to Process",
+      "port": 5858,
+      "outFiles": []
+    }
+  ]
+}
+
+/*{
+  "version": "0.2.0",
+  "configurations": [
+    {
       "name": "Chrome",
       "type": "chrome",
       "request": "launch",
@@ -19,4 +43,4 @@
       "outFiles": ["${workspaceRoot}/target/*.js"]
     }*/
   ]
-}
+}*/
