--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "android": "react-native-scripts android",
     "ios": "react-native-scripts ios",
     "test-crna": "node node_modules/jest/bin/jest.js --watch",
-    "start": "run-p start-*",
+    "start": "run-p start-ts start-crna",
     "build": "react-scripts build",
     "test": "jest --watch",
     "u": "jest -u",
@@ -19,15 +19,12 @@
     "start-cra": "react-scripts start",
     "start-ts": "tsc -w",
     "init-npm": "npm link mobx mobx-react js-plus tslib ts-jest jest @types/jest @types/node",
-    "init-cra-base": "npm link react react-dom react-scripts @types/react @types/react-dom",
-    "init-crna-base": "npm link expo@15.1.3 react@15.4.0 react-native@0.42.3 react-native-scripts@0.0.27 react-test-renderer@15.4.1 @types/react-native jest-expo@0.3.0",
+    "init-cra-base": "npm link react@15.4.1 react-dom@15.4.1 react-scripts @types/react @types/react-dom",
+    "init-crna-base": "npm link expo@15.1.3 react@15.4.1 react-native@0.42.3 react-native-scripts@0.0.27 react-test-renderer@15.4.1 @types/react-native jest-expo@0.3.0",
     "install-eslint": "npm install -g eslint-config-react-app eslint babel-eslint eslint-plugin-react eslint-plugin-import eslint-plugin-jsx-a11y eslint-plugin-flowtype eslint-plugin-import",
     "init-cra": "run-s init-cra init-npm",
     "init-crna": "run-s init-crna init-npm",
     "prettier": "prettier --write 'src/**.js' --single-quote --trailing-comma=all --bracket-spacing=false"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
   },
   "devDependencies": {
     "react-scripts": "",
@@ -46,9 +43,9 @@
   },
   "dependencies": {
     "expo": "^15.1.3",
-    "react": "~15.4.0",
+    "react": "~15.4.1",
     "react-native": "0.42.3",
-    "react-dom": "~15.4.0",
+    "react-dom": "~15.4.1",
     "react-native-web": "",
     "react-native-navigation": "",
     "mobx": "",
@@ -66,7 +63,14 @@
     "globals": {
       "__TS_CONFIG__": {
         "module": "commonjs",
-        "jsx": "react"
+        "jsx": "react",
+        "experimentalDecorators": true,
+        "emitDecoratorMetadata": true,
+        "allowSyntheticDefaultImports": true,
+        "moduleResolution": "node",
+        "strictNullChecks": true,
+        "noEmitHelpers": true,
+        "importHelpers": true
       }
     }
   }
