--- a/package.json
+++ b/package.json
@@ -8,52 +8,42 @@
     "start-crna": "react-native-scripts start",
     "android": "react-native-scripts android",
     "ios": "react-native-scripts ios",
-    "crna": "run-p start-ts start-crna",
-    "start": "run-p start-ts start-cra",
-    "build": "react-scripts build",
     "test": "jest --watch",
-    "txp": "jest --watch  --config=expo-jest.json",
-    "tst": "jest --watch --config=ts-jest.json",
+    "start": "",
+    "build": "react-scripts build",
+    "tst": "react-scripts-ts test",
     "u": "jest -u",
-    "start-cra": "react-scripts start",
-    "start-ts": "tsc -w",
-    "init-npm": "npm link mobx mobx-react js-plus tslib tsutils @types/node react @types/react ts-jest",
-    "init-cra-base": "npm link react react-dom react-scripts @types/react @types/react-dom",
-    "init-crna-base": "npm link react react-native react-native-scripts expo @types/react @types/react-native react-test-renderer jest-expo",
-    "init-jest": "npm link jest-expo react-test-renderer ts-jest jest @types/jest babel-jest babel-preset-expo babel-plugin-transform-es2015-modules-commonjs",
-    "init-cra": "run-s init-cra-base init-npm",
-    "init-crna": "run-s init-crna-base init-npm",
-    "prettier": "prettier --write \"app/**.*(ts|tsx)\" --parser typescript --single-quote --bracket-spacing=false --no-semi",
-    "install-npm": "npm i -g mobx mobx-react js-plus tslib tsutils @types/node react@16.0.0-alpha.6 @types/react ts-jest",
-    "install-cra": "npm i -g  react-dom@16.0.0-alpha.6 react-scripts  @types/react-dom",
-    "install-crna": "npm i -g  react-native@0.44.0 expo@17.0.0  @types/react-native  react-native-scripts@0.0.30 react-test-renderer@16.0.0-alpha.6 jest-expo",
-    "install-eslint": "npm i -g eslint-config-react-app eslint babel-eslint eslint-plugin-react eslint-plugin-import eslint-plugin-jsx-a11y eslint-plugin-flowtype eslint-plugin-import",
-    "install-jest": "npm i -g jest-expo react-test-renderer ts-jest jest @types/jest babel-jest babel-preset-expo babel-plugin-transform-es2015-modules-commonjs"
+    "start-cra": "react-scripts start"
   },
   "devDependencies": {
-    "react-scripts": "",
-    "tslib": "",
-    "@types/react": "",
-    "@types/react-dom": "",
-    "@types/react-native": "",
-    "@types/jest": "",
-    "@types/node": "",
-    "ts-jest": "",
-    "react-native-scripts": ""
+    "if-env": "^1.0.0",
+    "jest-expo": "^1.0.2",
+    "jest-expo-ts": "^0.3.0",
+    "react-native-scripts": "0.0.31",
+    "react-native-typescript-transformer": "^1.0.9",
+    "react-scripts-ts": "2.2.0",
+    "react-test-renderer": "^16.0.0-alpha.12",
+    "typescript": "^2.3.4"
   },
   "dependencies": {
-    "expo": "^",
-    "js-plus": "",
-    "mobx": "",
-    "mobx-react": "",
-    "react": "",
-    "react-dom": "",
-    "react-native": ""
+    "@types/jest": "^20.0.0",
+    "@types/node": "^7.0.31",
+    "@types/react": "^15.0.29",
+    "@types/react-dom": "^15.5.0",
+    "@types/react-native": "",
+    "expo": "^18.0.0-rc.2",
+    "js-plus": "0.1.1",
+    "mobx": "3.1.15",
+    "mobx-react": "4.2.0",
+    "react": "^16.0.0-alpha.12",
+    "react-dom": "^16.0.0-alpha.12",
+    "react-native": "^0.45.1",
+    "tslib": "^2.3.4"
   },
   "keywords": [],
   "license": "MIT",
   "main": "./node_modules/react-native-scripts/build/bin/crna-entry.js",
   "jest": {
-    "preset": "jest-expo"
+    "preset": "jest-expo-ts"
   }
 }
