--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,7 +10,9 @@
       "console": "internalConsole",
       "cwd": "${workspaceRoot}",
       "program": "${workspaceRoot}/app/index.ts",
-      "outFiles": ["${workspaceRoot}/src/*.js"]
+      "outFiles": [
+        "${workspaceRoot}/src/*.js"
+      ]
     },
     {
       "type": "node",
@@ -21,7 +23,6 @@
     }
   ]
 }
-
 /*{
   "version": "0.2.0",
   "configurations": [
@@ -42,5 +43,3 @@
       "sourceMaps": true,
       "outFiles": ["${workspaceRoot}/target/*.js"]
     }*/
-  ]
-}*/
